--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v1
+      with:
+        path: /var/www/adflix
     - name: Build and up Docker Compose
       run: docker compose up -d
     - name: Check running containers
