--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
       with:
-        path: .
+        path: /var/www/adflix
     - name: Build and up Docker Compose
       run: docker compose up -d
     - name: Check running containers
