--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     runs-on: self-hosted
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@main
       with:
         path: /var/www/adflix
     - name: Build and up Docker Compose
