--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -14,8 +14,8 @@ jobs:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@main
-      with:
-        path: /var/www/adflix
+    - name: Move files
+      run: mv $GITHUB_WORKSPACE /var/www/adflix
     - name: Build and up Docker Compose
       run: docker compose up -d
     - name: Check running containers
