--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Build and up Docker Compose
       run: docker compose up -d
     - name: Check running containers
-      run: docker ps -a
+      run: docker compose ps -a
     - name: Check logs
       run: docker compose logs server --tail 50
     - name: Run Laravel migrations
