--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -4,12 +4,12 @@ on:
     branches:
       - master
     paths:
-      - server
+      - 'server/**'
   pull_request:
     branches:
       - master
     paths:
-      - server
+      - 'server/**'
     types:
       - closed
   workflow_dispatch:
