--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   redis:
     image: redis:latest
     healthcheck:
-      test: ["CMD", "redis-client", "ping"]
+      test: [ "CMD", "redis-cli", "--raw", "incr", "ping" ]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -34,27 +34,29 @@ services:
       - ./.env:/var/www/adflix/server/.env
     depends_on:
       redis:
-      mysql:
+        condition: service_healthy
+      db:
         condition: service_healthy
     working_dir: /var/www/adflix/server
     dns:
       - 1.1.1.1
       - 1.0.0.1
 
-    db:
-      image: mysql:latest
-      restart: always
-      environment:
-        MYSQL_DATABASE: ${DB_DATABASE}
-        MYSQL_USER: ${DB_USERNAME}
-        MYSQL_PASSWORD: ${DB_PASSWORD}
-      ports:
-        - 3307:3306
-      volumes:
-        - ./mysql:/var/lib/mysql
-      healthcheck:
-        test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
-        interval: 2s
-        timeout: 30s
-        retries: 100
+  db:
+    image: mysql:latest
+    restart: always
+    environment:
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_USER: ${DB_USERNAME}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+    ports:
+      - 3307:3306
+    volumes:
+      - ./db:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+      interval: 2s
+      timeout: 30s
+      retries: 100
     
