--- a/.github/workflows/laravel-migrate.yml
+++ b/.github/workflows/laravel-migrate.yml
@@ -12,7 +12,7 @@ defaults:
     working-directory: /var/www/adflix
     
 jobs:
-  deploy:
+  migrate:
     runs-on: self-hosted
     steps:
     - name: Pull code
