modified laravel-migrate.yml in workflows

--- a/.github/workflows/laravel-migrate.yml
+++ b/.github/workflows/laravel-migrate.yml
@@ -11,6 +11,7 @@ on:
         description: 'Reset the database'
         required: false
         default: false
+        type: boolean
 
 defaults:
   run:
