--- a/.github/workflows/test-laravel.yml
+++ b/.github/workflows/test-laravel.yml
@@ -2,7 +2,7 @@ name: "Laravel Test"
 on:
   pull_request:
     branches:
-      - develop
+      - test
     paths:
       - 'server/**'
     types:
