--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,17 @@ version: '3.8'
 services:
   redis:
     image: redis:latest
+    container_name: redis
     healthcheck:
       test: [ "CMD", "redis-cli", "--raw", "incr", "ping" ]
       interval: 5s
       timeout: 5s
       retries: 5
+    restart: always
 
   client:
     image: node:lts
+    container_name: client
     ports:
       - "3000:3000"
       - "3001:3001"
@@ -22,6 +25,7 @@ services:
   server:
     build:
       context: ./server
+    container_name: server
     ports:
       #octane server
       - target: 8000
@@ -41,9 +45,11 @@ services:
     dns:
       - 1.1.1.1
       - 1.0.0.1
+    restart: always
 
   db:
     image: mysql:latest
+    container_name: db
     restart: always
     environment:
       MYSQL_DATABASE: ${DB_DATABASE}
