modified .env.example in .

--- a/.env.example
+++ b/.env.example
@@ -57,5 +57,5 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-DOCKER_SERVER_PORT=
-DOCKER_DB_PORT=
+DOCKER_SERVER_PORT=8000
+DOCKER_DB_PORT=3000
