--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "embla-carousel-react": "^8.0.0-rc02",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
     "usehooks-ts": "^2.9.1"
