--- a/.env.example
+++ b/.env.example
@@ -60,3 +60,7 @@ VITE_API_BASE_URL="${APP_URL}/api"
 
 DOCKER_SERVER_PORT=8000
 DOCKER_DB_PORT=3336
+DOCKER_VITE_PORT=3000
+
+CLIENT_NAMES=adflix.test
+SERVER_NAMES=api.adflix.test
