--- a/config/nginx.dev.conf
+++ b/config/nginx.dev.conf
@@ -2,7 +2,7 @@ server {
   listen 80;
   listen [::]:80;
   
-  server_name {{ SERVER_NAMES }} {{ CLIENT_NAMES }};
+  server_name api.adflix.test bwk.pw adflix.test;
 
   return 301 https://$host$request_uri;
 }
@@ -15,9 +15,9 @@ map $http_upgrade $connection_upgrade {
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
-    server_name {{ SERVER_NAMES }};
+    server_name api.adflix.test bwk.pw;
     server_tokens off;
-    root {{ PWD }}/server/public;
+    root /var/www/adflix/server/public;
  
     index index.php;
  
@@ -47,8 +47,8 @@ server {
 
     error_page 404 /index.php;
 
-    ssl_certificate {{ PWD }}/config/ssl/cert.crt;
-    ssl_certificate_key {{ PWD }}/config/ssl/cert.key;    
+    ssl_certificate /var/www/adflix/config/ssl/cert.crt;
+    ssl_certificate_key /var/www/adflix/config/ssl/cert.key;    
     ssl_session_timeout 5m;   
     ssl_protocols SSLv3 TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers "HIGH:!aNULL:!MD5 or HIGH:!aNULL:!MD5:!3DES";
@@ -70,7 +70,7 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
  
-        proxy_pass http://127.0.0.1:{{DOCKER_SERVER_PORT}}$suffix;
+        proxy_pass http://127.0.0.1:8881$suffix;
     }
 }
 
@@ -78,17 +78,22 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl;
 
-    server_name {{ CLIENT_NAMES }};
-    root {{ PWD }}/client/dist;
+    server_name adflix.test;
 
-    ssl_certificate {{ PWD }}/config/ssl/cert.crt;
-    ssl_certificate_key {{ PWD }}/config/ssl/cert.key;    
-    ssl_session_timeout 5m;   
+    ssl_certificate /var/www/adflix/config/ssl/cert.crt;
+    ssl_certificate_key /var/www/adflix/config/ssl/cert.key;
+    ssl_session_timeout 5m;
     ssl_protocols SSLv3 TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers "HIGH:!aNULL:!MD5 or HIGH:!aNULL:!MD5:!3DES";
     ssl_prefer_server_ciphers on;
 
     location / {
-        try_files $uri $uri/ /index.html;
+        proxy_http_version 1.1;
+        proxy_set_header Host $http_host;
+        proxy_set_header Scheme $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+
+        proxy_pass http://127.0.0.1:3000;
     }
 }
