--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 APP_NAME=AdFlix
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:J9iCXQ/uFkgF3+PbDVaM4FrRBC+ISTxY+kHD0vMoHbw=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://adflix.test
+APP_DOMAIN=adflix.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -13,7 +14,7 @@ DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=adflix
 DB_USERNAME=adflix
-DB_PASSWORD=password
+DB_PASSWORD=qQFpYvRVGtJHRr3
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -29,11 +30,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=6f9e73bf1e80ae
+MAIL_PASSWORD=dbc9d768fea94b
+MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
@@ -56,11 +57,14 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-VITE_API_BASE_URL="${APP_URL}/api"
+VITE_API_BASE_URL="https://api.${APP_DOMAIN}"
 
-DOCKER_SERVER_PORT=8000
-DOCKER_DB_PORT=3336
+OCTANE_SERVER=roadrunner
+OCTANE_HTTPS=true
+
+DOCKER_SERVER_PORT=8881
+DOCKER_DB_PORT=3337
 DOCKER_VITE_PORT=3000
 
-CLIENT_NAMES=adflix.test
-SERVER_NAMES=api.adflix.test
+CLIENT_NAMES=${APP_DOMAIN}
+SERVER_NAMES="api.${APP_DOMAIN} bwk.pw"
