modified .env.example in .

--- a/.env.example
+++ b/.env.example
@@ -32,8 +32,8 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=6f9e73bf1e80ae
-MAIL_PASSWORD=dbc9d768fea94b
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
