--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
     volumes:
       - ./server:/var/www/adflix/server
       - ./.env:/var/www/adflix/server/.env
+      - ./config/php.ini:/usr/local/etc/php/php.ini
     depends_on:
       redis:
         condition: service_healthy
