--- a/.env.example
+++ b/.env.example
@@ -64,7 +64,7 @@ OCTANE_HTTPS=true
 
 DOCKER_SERVER_PORT=8881
 DOCKER_DB_PORT=3337
-DOCKER_VITE_PORT=3000
+DOCKER_NEXT_PORT=3000
 
 CLIENT_NAMES=${APP_DOMAIN}
 SERVER_NAMES="api.${APP_DOMAIN} bwk.pw"
