--- a/client/package.json
+++ b/client/package.json
@@ -1,54 +1,20 @@
 {
-  "name": "client",
+  "name": "adflix",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.8",
-    "@mantine/carousel": "^6.0.9",
-    "@mantine/core": "^6.0.9",
-    "@mantine/dates": "^6.0.9",
-    "@mantine/dropzone": "^6.0.9",
-    "@mantine/form": "^6.0.9",
-    "@mantine/hooks": "^6.0.9",
-    "@mantine/modals": "^6.0.9",
-    "@mantine/notifications": "^6.0.9",
-    "@mantine/nprogress": "^6.0.9",
-    "@mantine/prism": "^6.0.9",
-    "@mantine/spotlight": "^6.0.9",
-    "@mantine/tiptap": "^6.0.9",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@tabler/icons-react": "^2.17.0",
-    "@tiptap/extension-link": "^2.0.3",
-    "@tiptap/react": "^2.0.3",
-    "@tiptap/starter-kit": "^2.0.3",
-    "axios": "^1.4.0",
-    "dayjs": "^1.11.7",
-    "embla-carousel-react": "^8.0.0-rc02",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-helmet-async": "^1.3.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.11.0",
-    "usehooks-ts": "^2.9.1"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "@vitejs/plugin-react": "^4.0.0",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.2"
+    "@types/node": "18.16.3",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.1",
+    "next": "13.3.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "5.0.4"
   }
 }
