--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ APP_KEY=base64:J9iCXQ/uFkgF3+PbDVaM4FrRBC+ISTxY+kHD0vMoHbw=
 APP_DEBUG=true
 APP_URL=https://adflix.test
 APP_DOMAIN=adflix.test
+API_BASE_URL="https://api.${APP_DOMAIN}"
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -57,7 +58,6 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-VITE_API_BASE_URL="https://api.${APP_DOMAIN}"
 
 OCTANE_SERVER=roadrunner
 OCTANE_HTTPS=true
