--- a/.env.example
+++ b/.env.example
@@ -59,6 +59,8 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+NEXT_PUBLIC_API_BASE_URL="${API_BASE_URL}"
+
 OCTANE_SERVER=roadrunner
 OCTANE_HTTPS=true
 
