--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_KEY=base64:J9iCXQ/uFkgF3+PbDVaM4FrRBC+ISTxY+kHD0vMoHbw=
 APP_DEBUG=true
 APP_URL=https://adflix.test
 APP_DOMAIN=adflix.test
-API_BASE_URL="https://api.${APP_DOMAIN}"
+API_BASE_URL=https://api.${APP_DOMAIN}
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
