--- a/client/package.json
+++ b/client/package.json
@@ -1,47 +1,53 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.10.8",
-    "@emotion/server": "^11.10.0",
-    "@mantine/carousel": "^6.0.10",
-    "@mantine/core": "^6.0.10",
-    "@mantine/dates": "^6.0.10",
-    "@mantine/dropzone": "^6.0.10",
-    "@mantine/form": "^6.0.10",
-    "@mantine/hooks": "^6.0.10",
-    "@mantine/modals": "^6.0.10",
-    "@mantine/next": "^6.0.10",
-    "@mantine/notifications": "^6.0.10",
-    "@mantine/nprogress": "^6.0.10",
-    "@mantine/prism": "^6.0.10",
-    "@mantine/spotlight": "^6.0.10",
-    "@mantine/tiptap": "^6.0.10",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@tabler/icons-react": "^2.17.0",
-    "@tiptap/extension-link": "^2.0.3",
-    "@tiptap/react": "^2.0.3",
-    "@tiptap/starter-kit": "^2.0.3",
-    "@types/node": "18.16.3",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
-    "axios": "^1.4.0",
-    "dayjs": "^1.11.7",
-    "embla-carousel-react": "^8.0.0-rc02",
-    "next": "13.3.4",
-    "next-redux-wrapper": "^8.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-redux": "^8.0.5",
-    "redux-deep-persist": "^1.0.7",
-    "redux-persist": "^6.0.0",
-    "typescript": "5.0.4"
-  }
+	"name": "client",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.10.8",
+		"@emotion/server": "^11.10.0",
+		"@mantine/carousel": "^6.0.10",
+		"@mantine/core": "^6.0.10",
+		"@mantine/dates": "^6.0.10",
+		"@mantine/dropzone": "^6.0.10",
+		"@mantine/form": "^6.0.10",
+		"@mantine/hooks": "^6.0.10",
+		"@mantine/modals": "^6.0.10",
+		"@mantine/next": "^6.0.10",
+		"@mantine/notifications": "^6.0.10",
+		"@mantine/nprogress": "^6.0.10",
+		"@mantine/prism": "^6.0.10",
+		"@mantine/spotlight": "^6.0.10",
+		"@mantine/tiptap": "^6.0.10",
+		"@reduxjs/toolkit": "^1.9.5",
+		"@tabler/icons-react": "^2.17.0",
+		"@tiptap/extension-link": "^2.0.3",
+		"@tiptap/react": "^2.0.3",
+		"@tiptap/starter-kit": "^2.0.3",
+		"axios": "^1.4.0",
+		"dayjs": "^1.11.7",
+		"embla-carousel-react": "^8.0.0-rc02",
+		"next": "13.3.4",
+		"next-redux-wrapper": "^8.1.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-redux": "^8.0.5",
+		"redux-deep-persist": "^1.0.7",
+		"redux-persist": "^6.0.0",
+		"ua-parser-js": "^1.0.35",
+		"validator": "^13.9.0"
+	},
+	"devDependencies": {
+		"@types/node": "18.16.3",
+		"@types/react": "18.2.0",
+		"@types/react-dom": "18.2.1",
+		"@types/ua-parser-js": "^0.7.36",
+		"@types/validator": "^13.7.15",
+		"typescript": "5.0.4"
+	}
 }
