--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,8 @@
 		"axios": "^1.4.0",
 		"dayjs": "^1.11.7",
 		"embla-carousel-react": "^8.0.0-rc02",
+		"mantine-datatable": "^2.4.15",
+		"moment": "^2.29.4",
 		"next": "13.3.4",
 		"next-redux-wrapper": "^8.1.0",
 		"react": "18.2.0",
