--- a/server/composer.json
+++ b/server/composer.json
@@ -9,6 +9,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "imangazaliev/didom": "^2.0",
         "itsgoingd/clockwork": "^5.1",
+        "jenssegers/agent": "^2.6",
         "laravel/framework": "^10.8",
         "laravel/octane": "^1.5",
         "laravel/sanctum": "^3.2",
