--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,7 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+SESSION_SECURE_COOKIE=true
 
 MEMCACHED_HOST=127.0.0.1
 
@@ -53,11 +54,16 @@ PUSHER_PORT=443
 PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=mt1
 
+GOOGLE_RECAPTCHA_SITE_KEY=
+GOOGLE_RECAPTCHA_SECRET_KEY=
+
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+VITE_GOOGLE_RECAPTCHA_SITE_KEY=${GOOGLE_RECAPTCHA_SITE_KEY}
+VITE_APP_URL="https://app.${APP_DOMAIN}"
 
 NEXT_PUBLIC_API_BASE_URL="${API_BASE_URL}"
 
@@ -67,6 +73,7 @@ OCTANE_HTTPS=true
 DOCKER_SERVER_PORT=8881
 DOCKER_DB_PORT=3337
 DOCKER_NEXT_PORT=3000
+DOCKER_VUE_PORT=5173
 
 CLIENT_NAMES=${APP_DOMAIN}
 SERVER_NAMES="api.${APP_DOMAIN} bwk.pw"
