--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,11 +43,18 @@ services:
         published: ${DOCKER_SERVER_PORT}
         protocol: tcp
         mode: host
+      #vite server
+      - target: 5173
+        host_ip: 127.0.0.1
+        published: ${DOCKER_VUE_PORT}
+        protocol: tcp
+        mode: host
     volumes:
       - ./server:/var/www/adflix/server
       - ./.env:/var/www/adflix/server/.env
       - ./config/php.ini:/usr/local/etc/php/php.ini
       - ./data:/var/www/adflix/server/storage/app/data
+      - ./config/ssl:/var/www/adflix/server/storage/app/ssl
     depends_on:
       redis:
         condition: service_healthy
@@ -57,6 +64,8 @@ services:
     dns:
       - 1.1.1.1
       - 1.0.0.1
+    env_file:
+      - .env
 
   db:
     image: mysql:latest
