--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,20 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-vue": "^4.2.3",
+        "@vue/compiler-sfc": "^3.3.2",
+        "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
+        "chokidar": "^3.5.3",
+        "daisyui": "^2.51.6",
         "laravel-vite-plugin": "^0.7.2",
+        "postcss": "^8.4.23",
+        "tailwindcss": "^3.3.2",
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "chokidar": "^3.5.3"
+        "@vueuse/core": "^10.1.2",
+        "vue": "^3.3.2",
+        "vue-recaptcha-v3": "^2.0.1"
     }
 }
