--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,8 @@ APP_KEY=base64:J9iCXQ/uFkgF3+PbDVaM4FrRBC+ISTxY+kHD0vMoHbw=
 APP_DEBUG=true
 APP_URL=https://adflix.test
 APP_DOMAIN=adflix.test
-API_BASE_URL=https://api.${APP_DOMAIN}
+API_BASE_URL="https://api.${APP_DOMAIN}"
+APP_SECRET=aFpR2VWgvZ82NL2I
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -15,7 +16,7 @@ DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=adflix
 DB_USERNAME=adflix
-DB_PASSWORD=password
+DB_PASSWORD=qQFpYvRVGtJHRr3
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -32,11 +33,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=6f9e73bf1e80ae
+MAIL_PASSWORD=dbc9d768fea94b
+MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
@@ -54,9 +55,10 @@ PUSHER_PORT=443
 PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=mt1
 
-GOOGLE_RECAPTCHA_SITE_KEY=
-GOOGLE_RECAPTCHA_SECRET_KEY=
+GOOGLE_RECAPTCHA_SITE_KEY=6LeV7homAAAAANi7A6DheuvSEDJdfs211DCCkR1x
+GOOGLE_RECAPTCHA_SECRET_KEY=6LeV7homAAAAADU0YuhBQTNEhkjiNLF_UVC7E2pu
 
+VITE_APP_SECRET=${APP_SECRET}
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
@@ -76,4 +78,4 @@ DOCKER_NEXT_PORT=3000
 DOCKER_VUE_PORT=5173
 
 CLIENT_NAMES=${APP_DOMAIN}
-SERVER_NAMES="api.${APP_DOMAIN} bwk.pw"
+SERVER_NAMES="api.${APP_DOMAIN} app.${APP_DOMAIN} bwk.pw"
