--- a/server/package.json
+++ b/server/package.json
@@ -9,16 +9,17 @@
         "@vitejs/plugin-vue": "^4.2.3",
         "@vue/compiler-sfc": "^3.3.2",
         "autoprefixer": "^10.4.14",
-        "axios": "^1.1.2",
         "chokidar": "^3.5.3",
-        "daisyui": "^2.51.6",
+        "daisyui": "^3.6.4",
         "laravel-vite-plugin": "^0.7.2",
         "postcss": "^8.4.23",
         "tailwindcss": "^3.3.2",
-        "vite": "^4.0.0"
+        "vite": "^4.0.0",
+        "vite-plugin-wasm": "^3.2.2"
     },
     "dependencies": {
         "@vueuse/core": "^10.1.2",
+        "axios": "1.5.0",
         "crypto-js": "^4.1.1",
         "plyr": "^3.7.8",
         "vue": "^3.3.2",
